[package]
name = "scrap"
version = "0.1.0"
edition = "2018"

[dependencies]
chrono = "0.4"
clap = "2"
hex = "0.3.2"
maud = "0.20.0"
rand = "0.8.0"
postgres = { version = "0.19.0", features = [ "with-chrono-0_4" ] }
pulldown-cmark = { version = "0.5", default-features = false }
regex = "1"
r2d2_postgres = "0.18.0"
serde = { version = "1.0.94", features = [ "derive" ] }
signal-hook = "0.1.9"
tiny-keccak = "1.5.0"
toml = "0.5"
warp = "0.1.15"
